# khinsider-index-rs

./: Cargo.toml  README.md
src/: main.rs
src/indexer/: consts.rs  letter.rs  mod.rs
src/parsing/: json.rs
src/types/: album.rs  index.rs  mod.rs
