[package]
name = "khinsider-index-rs"
description = ""
authors = ["Liliesh <liliesh at proton dot me>"]
license = "GNU General Public License v3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
